# NotionAPI

./: .gitignore  Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs  types.rs
src/data_source/: mod.rs  types.rs
src/data_source/dto/: request.rs  response.rs
src/database/: mod.rs  types.rs
src/database/dto/: response.rs
src/datasource/: mod.rs  types.rs
src/page/: mod.rs  types.rs
src/page/dto/: request.rs
tests/: base.rs  data_source.rs  database.rs  page.rs
