[package]
name = "notion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

reqwest = { version = "0.12.24", features = ["json"] }

thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
dotenv = "0.15.0"
